# my_bl1_sdk_mods

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  pyrightconfig.json
packaged/: .gitignore  rys_auto_save.sdkmod  rys_qol.sdkmod  skill_tree_tweaks.sdkmod  startup_movie_skipper.sdkmod
scripts/: common_utils.py  package_all.py  package_files.py  package_mod.py  package_release_zip.py
src/native/blutils/: __init__.py  blutils.pyi  console_commands.py  pyproject.toml
src/native/blutils/antlr/: generate_stuff.sh  ue3_text_obj_lexer.g4
src/native/blutils/cpp/: _pymodule.cpp  object.cpp  object.h
src/native/blutils/cpp/antlr/: generate_stuff.sh  ue3_text_obj_lexer.g4  ue3_text_obj_parser.g4
src/native/blutils/tests/: import_object.txt  set_commands.txt
src/native/object_explorer/: CMakeLists.txt  __init__.py  object_explorer.cpp  object_explorer.pyi  pyproject.toml
src/native/object_explorer/cpp/: _imconfig_.h  _pymodule.cpp  initialise.cpp  object_explorer.cpp  object_explorer.h  util.cpp
src/native/package_tools/: __init__.py  _pymodule.cpp  editor.py  package_tools.cpp  package_tools.h  package_tools.pyi  pyproject.toml
src/native/text_mods/: __init__.py  pyproject.toml  text_mods.pyi
src/native/text_mods/cpp/: _pymodule.cpp  text_mods.cpp  text_mods.h
src/native/text_mods/lexer_parser/: CMakeLists.txt  Main.cpp  README.md  pch.h  text_mod_common.h  text_mod_errors.h  text_mod_lexer.cpp  text_mod_lexer.h  text_mod_parser.h  text_mod_tokens.h  text_mod_utils.cpp  text_mod_utils.h
src/native/text_mods/tm_parse/: .gitignore  CMakeLists.txt  pch.h
src/native/text_mods/tm_parse/common/: text_mod_common.h  text_mod_errors.cpp  text_mod_errors.h  text_mod_tokens.h  text_mod_utils.cpp  text_mod_utils.h
src/native/text_mods/tm_parse/lexer/: text_mod_lexer.cpp  text_mod_lexer.h
src/native/text_mods/tm_parse/parser/: copy_ptr.h  parser_iterator.cpp  parser_iterator.h  parser_rule_enum.h  parser_rules.cpp  parser_rules.h  parser_rules_to_string.cpp  primary_expr_rules.cpp  primary_expr_rules.h  primary_rules.cpp  primary_rules.h  primitive_expr_rules.cpp  primitive_expr_rules.h  text_mod_parser.cpp  text_mod_parser.h  token_ring_buffer.cpp  token_ring_buffer.h
src/native/text_mods/tm_parse/parser/rules/: parser_rules.cpp  parser_rules.h  primary_expr_rules.cpp  primary_expr_rules.h  primary_rules.cpp  primary_rules.h  primitive_expr_rules.cpp  primitive_expr_rules.h  tree_printing.cpp
src/native/text_mods/tm_parse/parser/utils/: parse_tree.cpp  parse_tree.h  tree_visualiser.cpp  tree_visualiser.h  tree_walker.cpp  tree_walker.h
src/native/text_mods/tm_parse/standalone/: lexer_test.cpp  main.cpp  parser_test.cpp  ring_buffer_test.cpp  wpc_obj_dump.txt  wpc_obj_dump_utf-16le.txt  wpc_obj_dump_utf-8.txt
src/native/text_mods/tm_parse/standalone/tests/: lexer_test.cpp  misc_test.cpp  parser_iterator_test.cpp  parser_test.cpp  program_rule_test.cpp  ring_buffer_test.cpp  text_mod_loader_test.cpp  utils.h
src/native/text_mods/tm_parse/standalone/treevis/: CMakeLists.txt  imgui.ini  main.cpp  text_editor_content.txt
src/native/text_mods/tm_parse/text_mod/: name_table.h  object_write_tree.cpp  object_write_tree.h  text_mod.cpp  text_mod.h  text_mod_context.cpp  text_mod_context.h  text_mod_loader.cpp  text_mod_loader.h  writer_context.cpp  writer_context.h
src/py/_auto_run/: __init__.py  custom_loot.py  debug.txt  text_mods.py  wpc_dump.txt
src/py/rys_auto_save/: README.md  __init__.py  hooks.py  options.py  pyproject.toml
src/py/rys_dynamic_game_scaling/: __init__.py  data.py  hooks.py  options.py  pyproject.toml  utils.py
src/py/rys_qol/: README.md  __init__.py  commands.py  hooks.py  keybinds.py  options.py  pyproject.toml  registration_list.py  willow_player_helper.py
src/py/save_extender/: __init__.py  cls_validator.py  data.py  data_source.py  exceptions.py  hooks.py  pyproject.toml  save_manager.py  serialize_core.py  sfe_core.py  utils.py
src/py/scripts/: _test.py  bhop.py  post_change_test_00.py  post_change_test_01.py  test_00.py  ui_test_00.py  ui_test_01.py  ui_test_02.py
src/py/skill_tree_tweaks/: README.md  __init__.py  flash_loader.py  helpers.py  hooks.py  pyproject.toml
src/py/skill_tree_tweaks/flash/: better_enhanced.swf  enhanced.swf  original.swf
src/py/startup_movie_skipper/: __init__.py  pyproject.toml
src/py/upk_loader/: __init__.py  pyproject.toml
src/py/upk_patcher/: pyproject.toml
src/upk/dynamic_game_scaling/: README.md
