[project]
name = "Borderlands Utilities"
version = "1.0"
authors = [{ name = "-Ry" }]
description = "A library containing various utility like functions for modding."

[packager]
safe_name = "blutils"
exclude_globs = ["*.pyc"]

[tool.sdkmod]
mod_type = "Library"
supported_games = "BL1"
coop_support = "Unknown"
license = { name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
