[project]
name = "rys_auto_save"
version = "1.0"
authors = [{ name = "-Ry" }]
description = "Implements Auto-Save Functionality"

[tool.sdkmod]
supported_games = ["BL1"]
download = "https://raw.githubusercontent.com/Ry0511/my_bl1_sdk_mods/refs/heads/master/packaged/rys_auto_save.sdkmod"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
