[project]
name = "Skilltree UI Fix"
version = "1.0"
authors = [{ name = "-Ry" }, { name = "sleepmaster" }]
description = "Fixes the skill tree by showing when a class mod augments a skill"

[packager]
safe_name = "skill_tree_tweaks"
exclude_globs = ["*.pyc"]

[tool.sdkmod]
mod_type = "Standard"
supported_games = "BL1"
coop_support = "Unknown"
auto_enable = "False"
license = { name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
