[project]
name = "Startup Movie Skipper"
version = "1.0"
authors = [{ name = "-Ry" }]
description = "Skips the startup movies"

[packager]
safe_name = "startup_movie_skiper"
exclude_globs = ["*.pyc"]

[tool.sdkmod]
mod_type = "Standard"
supported_games = "BL1"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
