[project]
name = "startup_movie_skipper"
version = "1.1"
authors = [{ name = "-Ry" }]
description = "Skips the startup movies"

[tool.sdkmod]
supported_games = ["BL1"]
download = "https://raw.githubusercontent.com/Ry0511/my_bl1_sdk_mods/refs/heads/master/packaged/startup_movie_skipper.sdkmod"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
